// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categorizer widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <span
    class="mock-KatexProvider"
  >
    <div
      class="perseus-renderer perseus-renderer-responsive"
    >
      <div
        class="paragraph"
        data-perseus-paragraph-index="0"
      >
        <div
          class="paragraph"
        >
          <strong>
            Classify each graph according to the kind of relationship it suggests.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="1"
      >
        <div
          class="perseus-block-math"
          style="margin-left: -16px; margin-right: -16px;"
        >
          <div
            class="perseus-block-math-inner"
            style="overflow-x: auto; overflow-y: hidden; margin-top: -10px; margin-bottom: -10px; transform: translate3d(0,0,0); padding: 10px 16px 10px 16px;"
          >
            <span
              style="display: block; width: 100%; transform: scale(1, 1)  translate(0, 8px); transform-origin: 0 0; opacity: 0;"
            >
              <span
                class="mock-TeX"
              >
                \\qquad\\qquad\\quad\\text{Graph 1}\\qquad\\qquad\\quad\\qquad\\qquad\\quad\\text{Graph 2}
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="2"
      >
        <div
          class="paragraph"
        >
          <div
            class="perseus-widget-container widget-nohighlight widget-block"
          >
            <div
              class="categorizer-container fullBleedContainer_8ybp6"
            >
              <table
                class="categorizer-table mobileTable_1wmcwov"
              >
                <thead>
                  <tr>
                    <th>
                       
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              No relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Positive linear relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Negative linear relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Nonlinear relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Graph 
                              <span
                                style="white-space: nowrap;"
                              >
                                <span />
                                <span
                                  class="mock-TeX"
                                >
                                  1
                                </span>
                                <span />
                              </span>
                            </div>
                          </div>
                        </div>
                      </span>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="No relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_0"
                          type="radio"
                        />
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Positive linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_0"
                          type="radio"
                        />
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Negative linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_0"
                          type="radio"
                        />
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Nonlinear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_0"
                          type="radio"
                        />
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Graph 
                              <span
                                style="white-space: nowrap;"
                              >
                                <span />
                                <span
                                  class="mock-TeX"
                                >
                                  2
                                </span>
                                <span />
                              </span>
                            </div>
                          </div>
                        </div>
                      </span>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="No relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_1"
                          type="radio"
                        />
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Positive linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_1"
                          type="radio"
                        />
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Negative linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_1"
                          type="radio"
                        />
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Nonlinear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <input
                          class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                          name="perseus_radio_10_1"
                          type="radio"
                        />
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="3"
      >
        <div
          class="paragraph"
        >
          <strong>
            Graph 1.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="4"
      >
        <div
          class="paragraph"
        >
          <div
            class="fixed-to-responsive svg-image"
            style="max-width: 220px; max-height: 223px;"
          >
            <div
              style="padding-bottom: 101.36%;"
            />
            <span
              style="background: url(/images/spinner.gif) no-repeat; background-position: center; width: 100%; height: 100%; position: absolute; min-width: 20px;"
            />
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="5"
      >
        <div
          class="paragraph"
        >
          <strong>
            Graph 2.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="6"
      >
        <div
          class="paragraph"
        >
          <div
            class="fixed-to-responsive svg-image"
            style="max-width: 244px; max-height: 223px;"
          >
            <div
              style="padding-bottom: 91.39%;"
            />
            <span
              style="background: url(/images/spinner.gif) no-repeat; background-position: center; width: 100%; height: 100%; position: absolute; min-width: 20px;"
            />
          </div>
            
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`categorizer widget should snapshot: first render 1`] = `
<div>
  <span
    class="mock-KatexProvider"
  >
    <div
      class="perseus-renderer perseus-renderer-responsive"
    >
      <div
        class="paragraph"
        data-perseus-paragraph-index="0"
      >
        <div
          class="paragraph"
        >
          <strong>
            Classify each graph according to the kind of relationship it suggests.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="1"
      >
        <div
          class="perseus-block-math"
        >
          <div
            class="perseus-block-math-inner"
            style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
          >
            <span
              class="mock-TeX"
            >
              \\qquad\\qquad\\quad\\text{Graph 1}\\qquad\\qquad\\quad\\qquad\\qquad\\quad\\text{Graph 2}
            </span>
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="2"
      >
        <div
          class="paragraph"
        >
          <div
            class="perseus-widget-container widget-nohighlight widget-block"
          >
            <div
              class="categorizer-container "
            >
              <table
                class="categorizer-table mobileTable_1wmcwov"
              >
                <thead>
                  <tr>
                    <th>
                       
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              No relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Positive linear relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Negative linear relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class="header_whrfk4"
                    >
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Nonlinear relationship
                            </div>
                          </div>
                        </div>
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Graph 
                              <span
                                style="white-space: nowrap;"
                              >
                                <span />
                                <span
                                  class="mock-TeX"
                                >
                                  1
                                </span>
                                <span />
                              </span>
                            </div>
                          </div>
                        </div>
                      </span>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="No relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Positive linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Negative linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Nonlinear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <span
                        class="mock-KatexProvider"
                      >
                        <div
                          class="perseus-renderer perseus-renderer-responsive"
                        >
                          <div
                            class="paragraph"
                            data-perseus-paragraph-index="0"
                          >
                            <div
                              class="paragraph"
                            >
                              Graph 
                              <span
                                style="white-space: nowrap;"
                              >
                                <span />
                                <span
                                  class="mock-TeX"
                                >
                                  2
                                </span>
                                <span />
                              </span>
                            </div>
                          </div>
                        </div>
                      </span>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="No relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Positive linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Negative linear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                    <td
                      class="category cell_13aakpm"
                    >
                      <div
                        aria-label="Nonlinear relationship"
                        class="perseus-interactive"
                        role="button"
                      >
                        <span
                          class="radioSpan_1mq3xs9"
                        >
                          <svg
                            aria-hidden="true"
                            height="1em"
                            role="img"
                            style="vertical-align: middle;"
                            viewBox="0 0 100 99.944"
                            width="1.0005603137757144em"
                          >
                            <path
                              d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="3"
      >
        <div
          class="paragraph"
        >
          <strong>
            Graph 1.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="4"
      >
        <div
          class="paragraph"
        >
          <div
            class="fixed-to-responsive svg-image"
            style="max-width: 220px; max-height: 223px;"
          >
            <div
              style="padding-bottom: 101.36%;"
            />
            <span
              style="background: url(/images/spinner.gif) no-repeat; background-position: center; width: 100%; height: 100%; position: absolute; min-width: 20px;"
            />
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="5"
      >
        <div
          class="paragraph"
        >
          <strong>
            Graph 2.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="6"
      >
        <div
          class="paragraph"
        >
          <div
            class="fixed-to-responsive svg-image"
            style="max-width: 244px; max-height: 223px;"
          >
            <div
              style="padding-bottom: 91.39%;"
            />
            <span
              style="background: url(/images/spinner.gif) no-repeat; background-position: center; width: 100%; height: 100%; position: absolute; min-width: 20px;"
            />
          </div>
            
        </div>
      </div>
    </div>
  </span>
</div>
`;
